--- a/client/chatTemplate.html
+++ b/client/chatTemplate.html
@@ -1,5 +1,5 @@
 <template name="chatTemplate"> 
-<h2>Enter a user name: <input id="userName" type="text" value="" /></p> 
+<h2>Enter a user name: <input id="userName" type="text" value="" /></h2> 
 <div style="border: 1px solid; padding: 10px; overflow-y: scroll; height: 350px"> 
 	{{#each messages}}<pre>{{userName}}: {{message}}</pre>{{/each}} 
 </div> 
