--- a/client/chat.html
+++ b/client/chat.html
@@ -1,7 +1,15 @@
 <head> 
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <script src="https://rawgithub.com/mrdoob/three.js/master/build/three.js"></script>
+	<script src="js/dat.gui.min.js"></script>
 	<title>Eisis!</title> 
 </head> 
 <body> 
 	<h1>Chat</h1> 
-	{{> chatTemplate }} 
+	<div>
+		{{> chatTemplate }}
+	</div>
+	<div>
+		{{> eisis }}
+	</div>
 </body> 
